Style Element inputs nicely

--- a/app/styles/element-overrides/icons.styl
+++ b/app/styles/element-overrides/icons.styl
@@ -10,3 +10,5 @@ el-icon-wrapper($name, $icon-name = $name) {
 
 el-icon-wrapper(opened-folder)
 el-icon-wrapper(circle-cross, cancel-2)
+el-icon-wrapper(plus)
+el-icon-wrapper(minus)
