--- a/app/styles/element-theme-default/index.styl
+++ b/app/styles/element-theme-default/index.styl
@@ -1,6 +1,5 @@
 @import "./base"
 
-@import "./select"
 @import "./notification"
 @import "./slider"
 @import "./checkbox"
@@ -8,6 +7,11 @@
 @import "./switch"
 @import "./dropdown"
 @import "./dropdown-menu"
+@import "./select-dropdown"
+@import "./tag"
+@import "./option"
+@import "./option-group"
+@import "./scrollbar"
 @import "./loading"
 @import "./dialog"
 @import "./table"
@@ -21,7 +25,6 @@
 @import "./date-picker"
 @import "./time-picker"
 @import "./time-select"
-@import "./tag"
 @import "./breadcrumb"
 @import "./form"
 @import "./tabs"
