--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -13,6 +13,7 @@
 @import 'element/button'
 @import 'element/input-number'
 @import 'element/input'
+@import 'element/select'
 
 @import 'element-theme-default/index'
 @import 'element-overrides/alerts'
