--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -572,3 +572,6 @@ $list-box-item-border-radius = $border-radius-base
 
 // Label
 $label-bottom-margin = $gap-small
+
+// MultiInput
+$multi-input-spacing = $gap-small
