Use Element tabs for top-level tab bar

--- a/app/styles/element-overrides/icons.styl
+++ b/app/styles/element-overrides/icons.styl
@@ -12,3 +12,11 @@ el-icon-wrapper(opened-folder)
 el-icon-wrapper(circle-cross, cancel-2)
 el-icon-wrapper(plus)
 el-icon-wrapper(minus)
+
+.el-icon-close {
+  @extend .icon
+
+  &:after {
+    content: "×"
+  }
+}
