--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -1,5 +1,3 @@
-$input-border = 1px solid #666 //TODO remove when all inputs are replaced with Element ones
-
 /**
  * Base
  */
@@ -323,13 +321,17 @@ $group-title-font-size = $font-size-base
 $group-title-width = 66px
 
 // Tab
+$tab-height = 42px
+$tab-margin-bottom = $gap-medium
+$tab-padding = 0 $gap-medium
 $tab-font-size = $font-size-base
-$tab-border-line = 1px solid #e4e4e4
-$tab-header-color-active = $color-secondary
-$tab-header-color-hover = $font-color-base
+$tab-border-line = none
+$tab-header-color-active = $color-primary
+$tab-header-color-hover = $color-secondary
 $tab-header-color = $font-color-base
 $tab-header-fill-active = rgba($color-black, 0.06)
 $tab-header-fill-hover = rgba($color-black, 0.06)
+$tab-card-fill = $fill-darken
 $tab-vertical-header-width = 90px
 $tab-vertical-header-count-color = $color-white
 $tab-vertical-header-count-fill = $color-secondary
