--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -14,6 +14,7 @@
 @import 'element/input-number'
 @import 'element/input'
 @import 'element/select'
+@import 'element/tabs'
 
 @import 'element-theme-default/index'
 @import 'element-overrides/alerts'
