--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -15,6 +15,7 @@
 @import 'element/input'
 @import 'element/select'
 @import 'element/tabs'
+@import 'element/tree'
 
 @import 'element-theme-default/index'
 @import 'element-overrides/alerts'
