Allow opening files from the tree view

--- a/app/styles/element/tree.styl
+++ b/app/styles/element/tree.styl
@@ -55,9 +55,7 @@
       color: $color-light-silver
     }
 
-    & > .el-tree-node__children {
-      overflow: hidden
-      background-color: transparent
+    &:not(.is-leaf) > .el-tree-node__children {
       margin-bottom: $gap-xsmall
     }
 
