Create a reusable component for settings forms

--- a/app/styles/element/tabs.styl
+++ b/app/styles/element/tabs.styl
@@ -59,7 +59,7 @@
     &__content {
       flex: 1
       position: relative
-      padding-top: $tab-margin-bottom
+      padding: $tab-pane-padding
     }
     &--card {
       &>.el-tabs__header>.el-tabs__active-bar {
