--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -322,8 +322,8 @@ $group-title-width = 66px
 
 // Tab
 $tab-height = 42px
-$tab-margin-bottom = $gap-medium
 $tab-padding = 0 $gap-medium
+$tab-pane-padding = $gap-medium
 $tab-font-size = $font-size-base
 $tab-border-line = none
 $tab-header-color-active = $color-primary
