Fix tab pane height

--- a/app/styles/element/tabs.styl
+++ b/app/styles/element/tabs.styl
@@ -60,6 +60,7 @@
       flex: 1
       position: relative
       padding: $tab-pane-padding
+      min-height: 0
     }
     &--card {
       &>.el-tabs__header>.el-tabs__active-bar {
