Style checkboxes nicely

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -11,6 +11,7 @@
 
 @import 'element/alerts'
 @import 'element/button'
+@import 'element/checkbox'
 @import 'element/input-number'
 @import 'element/input'
 @import 'element/select'
