--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -111,31 +111,6 @@ $tab-width = 10rem
  * Element UI
  */
 
-// Checkbox
-$checkbox-font-size = 14px
-$checkbox-color = $color-base-black
-$checkbox-input-height = 18px
-$checkbox-input-width = 18px
-$checkbox-input-border-radius = $border-radius-base
-$checkbox-input-fill = $color-white
-$checkbox-input-border = $border-base
-$checkbox-input-border-color = $border-color-base
-$checkbox-icon-color = $color-white
-
-$checkbox-disabled-input-border-color = $disabled-border-base
-$checkbox-disabled-input-fill = $disabled-fill-base
-$checkbox-disabled-icon-color = $disabled-fill-base
-
-$checkbox-disabled-checked-input-fill = $disabled-border-base
-$checkbox-disabled-checked-input-border-color = $disabled-border-base
-$checkbox-disabled-checked-icon-color = $color-white
-
-$checkbox-checked-input-border-color = $color-secondary
-$checkbox-checked-input-fill = $color-primary
-$checkbox-checked-icon-color = $fill-base
-
-$checkbox-input-border-color-hover = $color-primary
-
 // Radio
 $radio-font-size = 14px
 $radio-color = $color-base-black
@@ -291,6 +266,31 @@ $input-small-height = 30px
 
 $input-mini-font-size = 12px
 $input-mini-height = 22px
+
+// Checkbox
+$checkbox-font-size = $font-size-base
+$checkbox-color = $font-color-base
+$checkbox-input-height = $font-size-base
+$checkbox-input-width = $font-size-base
+$checkbox-input-border-radius = $border-radius-base
+$checkbox-input-fill = $fill-base
+$checkbox-input-border = $input-border
+$checkbox-input-border-color = $input-border-color
+$checkbox-icon-color = $color-white
+
+$checkbox-disabled-input-border-color = $disabled-border-base
+$checkbox-disabled-input-fill = $disabled-fill-base
+$checkbox-disabled-icon-color = $disabled-fill-base
+
+$checkbox-disabled-checked-input-fill = $disabled-border-base
+$checkbox-disabled-checked-input-border-color = $disabled-border-base
+$checkbox-disabled-checked-icon-color = $color-white
+
+$checkbox-checked-input-border-color = $color-secondary
+$checkbox-checked-input-fill = $color-primary
+$checkbox-checked-icon-color = $color-white
+
+$checkbox-input-border-color-hover = $color-primary
 
 // Cascader
 $cascader-menu-fill = $fill-base
