Add materials list to mesh editor

--- a/app/styles/element-extras/list-box.styl
+++ b/app/styles/element-extras/list-box.styl
@@ -16,5 +16,9 @@
         background: lighten($list-box-fill, 15%)
       }
     }
+
+    &__empty {
+      padding: $list-box-empty-padding
+    }
   }
 }
