--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -571,6 +571,7 @@ $list-box-border-radius = $border-radius-base
 $list-box-item-color = $button-default-color
 $list-box-item-padding = $gap-small
 $list-box-item-border-radius = $border-radius-base
+$list-box-empty-padding = $gap-small
 
 // Label
 $label-bottom-margin = $gap-small
