Fix spacing around tabs and benches

--- a/app/styles/variables.styl
+++ b/app/styles/variables.styl
@@ -323,7 +323,7 @@ $group-title-width = 66px
 // Tab
 $tab-height = 42px
 $tab-padding = 0 $gap-medium
-$tab-pane-padding = $gap-medium
+$tab-pane-padding = $gap-small
 $tab-font-size = $font-size-base
 $tab-border-line = none
 $tab-header-color-active = $color-primary
